--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.5.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -50,6 +52,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.475.0",
     "next": "15.2.0-canary.67",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
@@ -72,6 +75,7 @@
     "daisyui": "^4.12.23",
     "eslint": "^9",
     "eslint-config-next": "15.2.0-canary.67",
+    "prisma": "^6.5.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
