--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.0",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.5.0",
+    "@prisma/client": "^6.7.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -43,6 +43,7 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -69,6 +70,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -76,6 +78,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.0-canary.67",
     "prisma": "^6.5.0",
+    "supabase": "^2.20.12",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
