--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "embla-carousel-react": "^8.5.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.475.0",
-    "next": "15.2.0-canary.67",
+    "next": "^15.2.0",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
