--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,44 @@
-name: Keep Supabase Awake
+name: Ping Supabase to Prevent Pausing
 
 on:
   schedule:
-    - cron: '0 9 * * 1,4' 
-  workflow_dispatch:
+    - cron: '0 9 * * 1,4'  # Every Monday & Thursday at 9:00 AM UTC
+  workflow_dispatch:        # Allow manual run from GitHub UI
 
 jobs:
   ping:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Curl request to Supabase
-        run: curl https://ohtsnsoxzgjbgatxkknb.supabase.co/rest/v1/product
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      - name: Install Supabase Client
+        run: npm install @supabase/supabase-js --force
+
+      - name: Ping Supabase
+        env:
+          SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
+          SUPABASE_KEY: ${{ secrets.NEXT_SERVICE_ROLE_KEY }}
+        run: |
+          node -e "
+          (async () => {
+            try {
+              const { createClient } = require('@supabase/supabase-js');
+              const supabase = createClient(process.env.SUPABASE_URL, process.env.SUPABASE_KEY);
+
+              const { data, error } = await supabase.from('Product').select('*').limit(10);
+
+              if (error) throw error;
+              console.log('Ping successful:', data);
+            } catch (err) {
+              console.error('Error pinging Supabase:', err.message);
+              process.exit(1);
+            }
+          })();
+          "
